Ticket #27939: Fix the inconsistent vertical gap between the various forms of check-box and radio-button fields. The horizontal gap should always be large, but the vertical should always be small.

--- a/com.top_logic/src/main/webapp/style/template.css
+++ b/com.top_logic/src/main/webapp/style/template.css
@@ -1851,7 +1851,8 @@ img.type-image {
 .cChoice-vertical {
 	display: inline-flex;
 	flex-direction: column;
-	gap: var(--spacing-02);
+	column-gap: var(--spacing-03);
+	row-gap: var(--spacing-02);
 }
 
 .cChoice-horizontal .cChoice-option label {
